@@ -1,5 +1,9 @@
 2011-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* src/devdescr.cc (atxmega256a3): New entry.
+
+2011-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* src/jtag.h (xmega_device_desc_type): eeprom_page_size is
 	only one byte
 	* src/devdescr.cc (atxmega128a1, atxmega128a1revd): (Dito.)
